--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -17,3 +17,31 @@
 
   100%
     transform: translateY(0px)
+
+.bg1
+  background-color: #8AB2EE 
+.bg2 
+  background-color: #FEE2DF 
+.bg3
+  background-color: #4B96E3 
+.bg4
+  background-color: #6B8BE8
+.bg5
+  background-color: #DBEAFA  
+.bg6
+  background-color: #FA6D61
+.bg7
+  background-color:#FFFFFF
+  border-radius: 20px
+.bgimg1
+    background-image: url('../assets/curso/temas/t2/pestañas.svg') !important;
+    background-size: cover
+    background-repeat: no-repeat
+    background-position: center 
+    height: 400px !important
+h3.bgtitulo1
+  width: fit-content
+  background-color: #FA6D61 
+h3.bgtitulo2
+  width: fit-content
+  background-color: #4B96E3 
