--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -54,10 +54,10 @@ $color-institucional: #39A900
 
 // Colores Curso ---------------------------------------
 
-$color-primario: #522981
-$color-secundario: #7DD3E9
-$color-acento-contenido: #FF4A69
-$color-acento-botones: #FFCD0D
+$color-primario: #4B96E3 
+$color-secundario: #6B8BE8 
+$color-acento-contenido: #FA6D61 
+$color-acento-botones: #FFBE01 
 $color-adicional-1: #CDDC39
 $color-adicional-2: #00BCD4
 
