--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -3,11 +3,11 @@
     animation: float1 3.5s ease-in-out infinite alternate
     position: absolute
     top: 40%
-    right: 50%
+    right: 14%
   &-2
     animation: float1 2.8s ease-in-out infinite alternate
     position: absolute
-    top: 51%
+    top: 8%
     right: 30%
 
 
@@ -17,6 +17,10 @@
 
   100%
     transform: translateY(0px)
+
+.banner-principal p, .banner-principal h1, .banner-principal h2, .banner-principal h3, .banner-principal h4, .banner-principal h5, .banner-principal h6
+  color: #12263f
+
 
 .bg1
   background-color: #8AB2EE 
