--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -20,7 +20,8 @@
 
 .banner-principal p, .banner-principal h1, .banner-principal h2, .banner-principal h3, .banner-principal h4, .banner-principal h5, .banner-principal h6
   color: #12263f
-
+.img-infografica__item, .img-infografica-b__item 
+  width: 6.5%
 
 .bg1
   background-color: #8AB2EE 
