--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -22,7 +22,65 @@
   color: #12263f
 .img-infografica__item, .img-infografica-b__item 
   width: 6.5%
+.slyder-f__btn
+    width: 8%
+    display: flex
+    align-items: center
+    justify-content: center
+    cursor: pointer
+.slyder-f__btn i 
+    font-size: 2rem
+    min-width: 50px
+    max-width: 50px
+    min-height: 50px
+    max-height: 50px
+    flex: auto
+    border-radius: 50%
+    background-color: #FFBE01
+    display: flex
+    justify-content: center
+    align-items: center
+.slyder-f__btn.pe-3
+  margin-right: 1rem
+  padding-right: 0 !important
+.slyder-f__btn.ps-3
+  margin-left: 1rem
+  padding-left: 0 !important
+  
+.tarjeta.color-secundario-cus 
+  background-color: #AEE6E6
 
+.bgimg
+  background-image: url('../assets/curso/temas/t2/fondo.png')
+  background-size: 100% 100%
+  background-position: center 
+.blanco
+  background-color: #ffff
+  border-radius: 20px
+.bgimg2
+  background-image: url('../assets/curso/temas/t2/fondo2.png')
+  background-size: 100% 100%
+  background-position: center 
+.slyder-a__btn--sigt, .slyder-a__btn--atrs 
+  background-color: #FFBE01
+.slyder-a__bullets__item.slyder-a__bullets__item--active
+  background-color: #dc3545
+  border-color: #dc3545
+  opacity: 1
+.slyder-a__bullets__item 
+  width: 15px
+  height: 15px
+  background-color: #FFACA5
+.line
+  line-height: 1.1
+.bgimg3
+  background-image: url('../assets/curso/temas/t2/fondo4.png')
+   background-size: 100% 100%
+  background-position: center 
+.bgimg4
+  background-image: url('../assets/curso/temas/t2/fondo5.png')
+  background-size: 100% 100%
+  background-position: center 
 .bg1
   background-color: #8AB2EE 
 .bg2 
