--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -108,3 +108,5 @@ h3.bgtitulo1
 h3.bgtitulo2
   width: fit-content
   background-color: #4B96E3 
+.cajon.color-primario 
+  background-color: #d8ecff
