--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -21,7 +21,7 @@
 .banner-principal p, .banner-principal h1, .banner-principal h2, .banner-principal h3, .banner-principal h4, .banner-principal h5, .banner-principal h6
   color: #12263f
 .img-infografica__item, .img-infografica-b__item 
-  width: 6.5%
+  width: 2.5%
 .slyder-f__btn
     width: 8%
     display: flex
@@ -79,6 +79,10 @@
   background-position: center 
 .bgimg4
   background-image: url('../assets/curso/temas/t2/fondo5.png')
+  background-size: 100% 100%
+  background-position: center 
+.bgimg5
+  background-image: url('../assets/curso/temas/t3/fondo.png')
   background-size: 100% 100%
   background-position: center 
 .bg1
