--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -100,6 +100,18 @@
 .bg7
   background-color:#FFFFFF
   border-radius: 20px
+.bg8
+  background-color: #FDEFC9 
+.bg9
+  background-color: #FEFAF6
+.cajon.color-acento-contenido 
+    background-color: #FDCAC6
+.subt h3
+  border-bottom: 3px solid #4B96E3
+.acordion .acordion__activo
+  background-color: #FEE2DF
+.acordion__accion__btn--a
+  background-color: #FFBE01
 .bgimg1
     background-image: url('../assets/curso/temas/t2/pestañas.svg') !important;
     background-size: cover
@@ -114,3 +126,85 @@ h3.bgtitulo2
   background-color: #4B96E3 
 .cajon.color-primario 
   background-color: #d8ecff
+
+// TARJETA HOVER  
+.nav-holder2
+  display: inline-block
+  overflow: hidden
+  position: relative
+  border-radius: 25px
+  -webkit-transform: translateZ(0)
+  -moz-transform: translateZ(0)
+  transform: translateZ(0)
+.nav-holder2 *, .nav-holder2 *:before, .nav-holder2 *:after
+  -webkit-box-sizing: border-box
+  -moz-box-sizing: border-box
+  box-sizing: border-box
+  -webkit-transition: all 0.45s ease
+  -moz-transition: all 0.45s ease
+  transition: all 0.45s ease
+.nav-holder2:before
+  position: absolute
+  top: -13%
+  bottom: 0
+  left: 0
+  right: 0
+  content: ''
+  background-color: #FA6D61
+  opacity: 1
+  z-index: 888
+  -webkit-transition: all 0.45s ease
+  -moz-transition: all 0.45s ease
+  -ms-transition: all 0.45s ease
+  transition: all 0.45s ease
+  -webkit-transform: translateY(80%)
+  -moz-transform: translateY(80%)
+  transform: translateY(80%)
+.nav-holder2:hover:before
+  -webkit-transform: translateY(30%)
+  -moz-transform: translateY(30%)
+  transform: translateY(30%)
+  opacity: 1
+  -webkit-transition-delay: 0.1s
+  -moz-transition-delay: 0.1s
+  transition-delay: 0.1s
+  background-color: #8AB2EE
+.nav-holder2
+  .text
+    position: absolute
+    top: 70%
+    bottom: 0px
+    left: 0px
+    right: 0px
+    z-index: 999
+    bottom: 0
+    padding: 1em
+  img
+    backface-visibility: hidden
+    max-width: 100%
+    vertical-align: top
+    z-index: 0
+  p
+    margin: 0
+    opacity: 0
+    line-height: 1.2em
+.nav-holder2 h4
+  margin: 0
+  opacity: 1
+.nav-holder2:hover
+  .text
+    top: 25%
+  h4, p
+    opacity: 1
+    color: $color-sistema-texto
+@media (max-width: $bp-max-xs)    
+  .nav-holder2 .text
+    top: 75%
+  .nav-holder2:hover .text 
+    top: 24%
+  .nav-holder2:hover:before
+    -webkit-transform: translateY(30%)
+    -moz-transform: translateY(30%)
+    transform: translateY(30%)
+.tabla1 tbody
+  background-color: #FFF
